test/pass/11-ifthenelse_expression.perk
import "stdio.h"

fun main (): int {
    printf("Result: %d\n", if true then 1 else 0);
    return 0;
}