test/fail/21-noreturn.perk
fun f(): int {
    if (true) {
        return 42;
    }
}